# bible-cli

./: CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: release.yml
docs/: index.html
src/: books.rs  cache.rs  cli.rs  commands.rs  main.rs  moods.rs  output.rs  plans.rs  reference.rs  topics.rs  verses.rs
src/ai/: anthropic.rs  mod.rs  openai.rs
src/output/: markdown.rs  mod.rs  spinner.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
