[package]
name = "bible-cli"
version = "0.2.0"
edition = "2021"
rust-version = "1.83"
description = "Fast, playful Bible CLI (KJV MVP)."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/migkapa/bible-cli"
homepage = "https://github.com/migkapa/bible-cli"
keywords = ["bible", "cli", "scripture", "kjv"]
categories = ["command-line-utilities"]

[[bin]]
name = "bible"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
indicatif = "0.17"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termimad = "0.30"
tokio = { version = "1", features = ["rt", "macros", "io-util", "io-std"] }
